# ninety-one

./: .gitignore  Makefile  README.md  custom_parser.py  pyproject.toml
notes/: csv_notes.ipynb  scores_notes.ipynb
src/: custom_cli.py  custom_parser.py  main.py
